tests/NormalTests/paczka2/big_fuzzy/84690176.err
Error in line 1: ndr8Hqf S789 5,0
Error in line 15: F3hBGcUw S7o9 160,6
Error in line 10: F3hBGcUw S789 53,9
Error in line 18: 3V2SqtE0 S789 33,7
Error in line 4: A190 S789 56,1
Error in line 27: 3V2SqtE0 S789 76,8
Error in line 22: A190 S343 65,6
Error in line 28: 3V2SqtE0 S343 31,6
Error in line 31: A190 S789 87,3
Error in line 45: 09UV3 S343 287,2
Error in line 46: 09UV3 S966 45,1
Error in line 54: F3hBGcUw S966 74,9
Error in line 72: ndr8Hqf S966 72,3
Error in line 99: 09UV3 S966 78,1
Error in line 116: 09UV3 S966 58,0
Error in line 121: 3V2SqtE0 S343 265,1
Error in line 115: 2YYjoy2H S789 99,2
Error in line 130: 2YYjoy2H S789 7,71
Error in line 127: 2YYjoy2H A190 45,7
Error in line 135: 3V2SqtE0 S789 99,0
Error in line 109: A190 S789 91,6
Error in line 141: ndr8Hqf S966 11,8
Error in line 150: 09UV3 S789 86,7
Error in line 148: ndr8Hqf A190 823,5
Error in line 134: xOxPLmvM S343 0,4
Error in line 133: 2YYjoy2H S789 12,4
Error in line 170: ndr8Hqf A190 6,00
Error in line 155: A190 S966 46,0
Error in line 151: 09UV3 S343 71,6
Error in line 159: 3V2SqtE0 A190 336,2
Error in line 182: 3V2SqtE0 S343 20,5
Error in line 189: 09UV3 S343 62,5
Error in line 191: 09UV3 S966 90,6
Error in line 196: 2YYjoy2H S966 93,6
Error in line 200: 09UV3 S3P3 2,3
Error in line 197: 3V2SqtE0 S789 83,7
Error in line 201: 3V2SqtE0 S343 27,6
Error in line 203: 2YYjoy2H S966 46,3
Error in line 207: xOxPLmvM S789 69,1
Error in line 222: 2YYjoy2H S343 53,30
Error in line 232: 3V2SqtE0 S343 35,6
Error in line 225: F3hBGcUw S343 14,9
Error in line 226: 2YYjoy2H S343 97,5
Error in line 241: ndr8Hqf S966 22,9
